--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,10 @@
 <h1>Hello</h1>
+<style>
+    body{
+        background-color: aqua;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
