first phase here

--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <title>Document</title>
 </head>
 <body>
+<section class="container">
+    <div class="loga">
+        <label>
+  <img src="https://image.shutterstock.com/image-vector/core-values-icon-trendy-linear-260nw-1246806448.jpg">
+  <h3>OTF</h3>
+    </label>
+</div>
+<nav>
+    <ul class="one" id="ul">
+        <li><a href=""></a>HOME</li>
+        <li><a href=""></a>ABOUT</li>
+        <li><a href=""></a>BLOG</li>
+        <li><a href=""></a>PRODUCT</li>
+        <li><a href=""></a>RICING</li>
+    </ul>
+    <div class="tow">
+        <button id="btn">Login</button>
+        <button id="sign">Get Started - it's free</button></div>
+</nav>
+</section>
 
 
-    
 </body>
 </html>
