--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 <!-- section one -->
 <section class="sec-one">
     <div class="now">
-        <button class="esi">now live <i class="fas fa-long-arrow-alt-right"></i></button>
+        <button class="esi"><i class="fas tno fa-circle"></i>Now Live <i class="fas fa-long-arrow-alt-right"></i></button>
 <h1>Create professional designs for FREE in a few clicks</h1>
 <button class="taa">Get Started - it's free <i class="fas fa-long-arrow-alt-right"></i></button>
     </div>
     <div class="know">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/8qX0VIVxivU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/s4cRB_niEKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </section>
 <!-- section two  -->
@@ -74,7 +74,121 @@
         <i class="fab fa-microsoft"></i>
         MICROSOFT
     </div>
-    
+    </section>
+<!-- section threee -->
+<section class="sec-three g">
+    <div class="ol">
+        <div class="col">
+            <h3></h3>
+            <p>Lorem ipsum, dolor sit amet 
+                consectetur adipisicing elit.
+                 Molestiae placeat iure, pariatur 
+                 a tenetur eius debitis ea impedit
+                  ipsum mollitia? Ex dicta 
+                  architecto iste 
+                obcaecati magni reiciendis hic cumque saepe.</p>
+        </div>
+        <div class="col">
+            <h3></h3>
+            <p>Lorem ipsum, dolor sit amet 
+                consectetur adipisicing elit.
+                 Molestiae placeat iure, pariatur 
+                 a tenetur eius debitis ea impedit
+                  ipsum mollitia? Ex dicta 
+                  architecto iste 
+                obcaecati magni reiciendis hic cumque saepe.</p>
+        </div>
+        <div class="col">
+            <h3></h3>
+            <p>Lorem ipsum, dolor sit amet 
+                consectetur adipisicing elit.
+                 Molestiae placeat iure, pariatur 
+                 a tenetur eius debitis ea impedit
+                  ipsum mollitia? Ex dicta 
+                  architecto iste 
+                obcaecati magni reiciendis hic cumque saepe.</p>
+        </div>
+    </div>
 </section>
+
+<!-- section four -->
+<section class="sec-four g">
+    <div class="for">
+  <h2>consectetur adipisicing elit</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Cum soluta expedita optio dignissimos asperiores harum itaque
+       corrupti recusandae, iure voluptate ut,
+       adipisci, a quo laudantium exercitationem ad ducimus earum. Rem!</p>
+       <button class="taa">Get Started - it's free <i class="fas fa-long-arrow-alt-right"></i></button>
+    </div>
+    <div class="fon">
+        <div class="bg"></div>
+        <div class="yt"></div>
+        <img src="https://images.pexels.com/photos/6631855/pexels-photo-6631855.jpeg">
+    </div>
+</section>
+<!-- section five -->
+<section class="sec-five g">
+    <div class="fiv">
+        <h1 class="h1">step 01</h1>
+        <button class="ton">step 01</button>
+        <h1>Start with niche & thematic templates</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+             Deserunt autem quae corrupti laudantium vero! Quisquam,
+              atque eveniet eos quam!</p>
+              <div class="icon">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fas fa-shopping-cart"></i>
+                <i class="fab fa-amazon"></i>
+              </div>
+    </div>
+</section>
+<section class="sec-six g">
+   <div class="si">
+   <div class="nt"></div>
+   <img src="https://images.pexels.com/photos/2531552/pexels-photo-2531552.jpeg">
+   </div>
+   <div class="xi">
+       <h1>Write Our Experience We Will Server You</h1>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+           Quis eum libero, ipsa modi aut quas. Nostrum, veniam dolorem
+            quasi tenetur numquam inventore quod fugiat 
+           voluptas cumque animi mollitia odit a.
+       Reiciendis officia eius, natus enim similique erro
+       r voluptatibus dolorum totam deserunt ab quidem nam facilis!
+        Illum eveniet ut enim consequuntur sequi explicabo mollitia hic, 
+        voluptas ullam nihil, assumenda, saepe vero?</p>
+            <button>Experience Here</button>
+   </div>
+</section>
+<header class="top">
+    <div class="inside">
+        <div class="side">
+            <img src="https://images.pexels.com/photos/3379937/pexels-photo-3379937.jpeg" width="100px" height="100px">
+            <p>Lorem ipsum dolor </p>
+        </div>
+        <div class="side">
+            <img src="https://images.pexels.com/photos/4050349/pexels-photo-4050349.jpeg" width="100px" height="100px">
+            <p>Lorem ipsum dolor </p>
+        </div>
+        <div class="side">
+            <img src="https://images.pexels.com/photos/7014337/pexels-photo-7014337.jpeg" width="100px" height="100px">
+            <p>Lorem ipsum dolor </p>
+        </div>
+        <div class="side">
+            <img src="https://images.pexels.com/photos/4993283/pexels-photo-4993283.jpeg" width="100px" height="100px">
+            <p>Lorem ipsum dolor </p>
+        </div>
+        <div class="side">
+            <img src="https://images.pexels.com/photos/3385662/pexels-photo-3385662.jpeg" width="100px" height="100px">
+            <p>Lorem ipsum dolor </p>
+        </div>
+    </div>
+</header>
+
+
+
+    <script src="main.js"></script>
 </body>
 </html>
